<resources>
    <string name="app_name">au664966 Corona Tracker 2</string>
    <string name="label_exit">Exit</string>
    <string name="label_cases">Cases:</string>
    <string name="label_deaths">Deaths:</string>
    <string name="label_back">Back</string>
    <string name="label_edit">Edit</string>
    <string name="label_user_rating">User rating</string>
    <string name="label_user_notes">User Notes:</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_save">Save</string>
    <string name="label_no_notes">No notes</string>
    <string name="label_notes">Notes</string>
    <string name="title_details">Country Details</string>
    <string name="title_edit">Edit Country</string>
    <string name="title_main">Country List</string>
    <string name="title_add_country">Add Country</string>
    <string name="label_country_name">Counrty Name</string>
    <string name="error_country_exists">Country is already in your list</string>
    <string name="error_cant_find">Country doesn\'t exist</string>
    <string name="success_country_added">Country added successfully!</string>
    <string name="label_add">Add</string>
    <string name="label_delete">Delete</string>
    <string name="error_delete">Couldn\'t delete country</string>
    <string name="notif_updating">Updating Corona stats</string>
    <string name="notif_updating_descr">Keeping you up to date with the latest corona information!</string>
    <string name="notif_data_channel">Corona Data</string>
    <string name="notif_latest_info">, latest information</string>
    <string name="error_network">Error obtaining data from server</string>
    <string name="label_new_deaths">New Deaths:</string>
    <string name="label_new_cases">New Cases:</string>
    <string name="error_initializing">Error obtaining initial data</string>
    <string name="label_emtpy">Add countries by pressing the add button or set the default country list</string>
    <string name="lable_add_default_countries">Add Default Countries</string>
</resources>